finished: Придется снести базу, поменялись миграции